--- a/styles/ui-variables-custom.less
+++ b/styles/ui-variables-custom.less
@@ -27,7 +27,7 @@
 // These variables are only used in this theme
 // ----------------------------------------------
 
-@ui-theme-name: one-light-ui;
+@ui-theme-name: vs-blue-ui;
 
 // Text (Custom) -----------------
 @text-color-faded: fade(@text-color, 30%);
@@ -70,7 +70,7 @@
 @progress-background-color:         @accent-color;
 
 @scrollbar-color:                   darken(@level-3-color, 14%);
-@scrollbar-background-color:        @level-3-color; // replaced `transparent` with a solid color to test https://github.com/atom/one-light-ui/issues/4
+@scrollbar-background-color:        @level-3-color;
 @scrollbar-color-editor:            contrast(@ui-syntax-color, darken(@ui-syntax-color, 14%), lighten(@ui-syntax-color, 9%) );
 @scrollbar-background-color-editor: @ui-syntax-color;
 
