added background and moved panels apart

--- a/styles/panels.less
+++ b/styles/panels.less
@@ -1,7 +1,9 @@
 .panel {
   &.bordered {
     border: 1px solid @base-border-color;
+    /*
     border-radius: @component-border-radius;
+    */
   }
 }
 
@@ -13,10 +15,14 @@ atom-panel {
 .inset-panel {
   position: relative;
   background-color: @inset-panel-background-color;
+  /*
   border-radius: @component-border-radius;
+  */
   &.bordered {
     border: 1px solid @base-border-color;
+    /*
     border-radius: @component-border-radius;
+    */
   }
   & .panel-heading {
     border-color: @inset-panel-border-color;
