--- a/styles/ui-variables-custom.less
+++ b/styles/ui-variables-custom.less
@@ -43,6 +43,7 @@
 @level-1-color: lighten(@base-background-color, 4%);
 @level-2-color: @base-background-color;
 @level-3-color: darken(@base-background-color, 8%);
+@level-4-color: #364e6f;
 
 
 // Accent (Custom) -----------------
