--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -62,13 +62,13 @@
 @button-background-color-hover:    darken(@button-background-color, 4%);
 @button-background-color-selected: lighten(@accent-color, 4%);
 @button-border-color:              @base-border-color;
-
+/*
 @tab-bar-background-color:         @level-3-color;
 @tab-bar-border-color:             @base-border-color;
 @tab-background-color:             @level-3-color;
 @tab-background-color-active:      @level-2-color;
 @tab-border-color:                 @base-border-color;
-
+*/
 @tree-view-background-color:       @level-3-color;
 @tree-view-border-color:           @base-border-color;
 
