--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -1,5 +1,4 @@
 @tab-border-size: 1px;
-@tab-border: @tab-border-size solid @tab-border-color;
 @tab-max-width: @ui-size*22;
 @tab-min-width: @ui-size*7; // icon + 5 characters
 @tab-padding: @ui-padding/1.5;
@@ -7,11 +6,10 @@
 
 .tab-bar {
   height: @ui-tab-height;
-  box-shadow: inset 0 -1px 0 @tab-border-color;
-  background: @tab-bar-background-color;
+  box-shadow: inset 0 -2px 0 @tab-background-color-active-nof;
+  background: @level-4-color;
   overflow-x: auto;
   overflow-y: hidden;
-  border-radius: 0;
 
   &::-webkit-scrollbar {
     display: none;
@@ -30,34 +28,8 @@
     line-height: @ui-tab-height;
     padding: 0;
     margin: 0;
-    background-clip: content-box;
     &.active {
-      border-radius: @component-border-radius*1.75 @component-border-radius*1.75 0 0;
-      background-color: @tab-background-color-active;
-    }
-
-    // Cover ----------------------
-
-    &::after {
-      content: "";
-      z-index: 1;
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: inherit;
-      border-radius: @component-border-radius @component-border-radius 0 0;
-      border: @tab-border;
-      border-bottom-color: @tab-background-color-active;
-      background-image: linear-gradient( hsla(0,0%,100,.02), hsla(0,0%,100,0) );
-      background-clip: content-box;
-      box-shadow: inset 0 1px 1px hsla(0,0%,100,.06);
-      transition: opacity .16s;
-      opacity: 0;
-    }
-    &.active::after {
-      opacity: 1;
-      transition: none;
+      background-color: @tab-background-color-active-nof;
     }
 
 
@@ -70,17 +42,11 @@
       margin: 0 @tab-padding;
       border-bottom: @tab-border-size solid transparent;
       text-overflow: clip;
-      // To use a mask and keep sub-pixel AA: Also add an opaque bg + HWA layer
-      -webkit-mask: linear-gradient( to left, hsla(0,0%,0%,0), hsla(0,0%,0%,1) 1em) no-repeat;
-      background-color: @tab-background-color;
       background-clip: content-box;
       backface-visibility: hidden;
     }
     &:hover .title {
       -webkit-mask-position: -@modified-icon-width 0;
-    }
-    &.active .title {
-      background-color: @tab-background-color-active;
     }
 
 
@@ -94,7 +60,6 @@
       width: 1.5em;
       height: 1.5em;
       line-height: 1.5;
-      border-radius: @component-border-radius;
       overflow: hidden;
       transform: scale(0);
       transition: transform .08s;
@@ -149,20 +114,6 @@
 
   .tab.active {
     color: @tab-text-color-active;
-  }
-
-  // Tab seperator ----------------------
-
-  .tab {
-    border-width: 0 0 0 1px;
-    border-image: linear-gradient(@tab-bar-background-color, @base-border-color 1em) 0 0 0 1 stretch;
-    &:first-child {
-      border-width: 0;
-    }
-  }
-  .tab.active,
-  .tab.active + .tab {
-    border-image: linear-gradient(transparent, transparent) 0 0 0 1 stretch;
   }
 
 
@@ -229,46 +180,11 @@
 }
 
 
-// Active pane marker --------------
-
-.tab-bar .tab::before {
-  content: "";
-  position: absolute;
-  pointer-events: none;
-  z-index: 2;
-  top: @tab-border-size;
-  left: @tab-border-size;
-  bottom: @tab-border-size;
-  width: 2px;
-  border-top-left-radius: inherit;
-  border-radius: @component-border-radius 0;
-  background: @accent-color;
-  opacity: 0;
-  transition: opacity .16s;
-
-  .theme-vs-blue-ui & {
-    left: 0;
-  }
+atom-pane.active .tab.active {
+  background-color: @tab-background-color-active;
 }
 
-atom-pane.active .tab.active:before {
-  opacity: 1;
-  transition-duration: .32s;
-}
-
-
-// Custom tabs --------------
-
-.tab-bar .tab.active {
-  &[data-type$="Editor"],
-  &[data-type="MarkdownPreviewView"] {
-    color: @tab-text-color-editor;
-    background-color: @tab-background-color-editor;
-    &::after {
-      border-bottom-color: @tab-background-color-editor;
-    }
-    .title {
-      background-color: @tab-background-color-editor;
-    }
-  }
+// Tab shadow for active pane
+atom-pane.active .tab-bar {
+  box-shadow: inset 0 -2px 0 @tab-background-color-active;
 }
