added border in between treeview sections

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -31,12 +31,18 @@
   .tree-view-resize-handle {
     width: 8px;
   }
+
+  > div:not(:first-child):not(:empty) {
+    border-top: solid @ui-padding-pane @level-4-color;
+  }
 }
 
+/*
 .tree-view-scroller {
   border-width: 0 0 1px 0;
   border-image: linear-gradient(to right, @tree-view-background-color @component-padding, @base-border-color @component-padding * 5) 0 0 1 0 stretch;
 }
+*/
 
 // Variable height, based on ems
 .list-group li:not(.list-nested-item),
