--- a/styles/ui-variables-custom.less
+++ b/styles/ui-variables-custom.less
@@ -52,7 +52,7 @@
 @accent-text-on-bg-color: contrast(@accent-color, white, hsl(@ui-hue,100%,12%), 33% );
 
 // Components (Custom) -----------------
-@badge-background-color:            @level-4-color; //fadein(@background-color-highlight, 8%);
+@badge-background-color:            fadein(@background-color-highlight, 8%);
 
 @button-text-color-selected:        @accent-text-on-bg-color;
 @button-border-color-selected:      @accent-color;
