adjusted some comments

--- a/styles/ui-variables-custom.less
+++ b/styles/ui-variables-custom.less
@@ -1,5 +1,5 @@
 
-// ONE light UI variables
+// VS Blue UI variables
 // ----------------------------------------------
 
 @import "syntax-variables";
