--- a/styles/ui-variables.less
+++ b/styles/ui-variables.less
@@ -1,14 +1,8 @@
 
 @import "ui-variables-custom"; // import colors and custom variables
 
-// ONE light UI variables
+// VS Blue UI variables
 // ----------------------------------------------
-
-// Official variables
-// These variables must be defined in every theme
-// Source: https://github.com/atom/atom/blob/master/static/variables/ui-variables.less
-// ----------------------------------------------
-
 
 // Text -----------------
 @text-color:            @ui-fg;
